<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_24"
        android:orderInCategory="0"
        android:title="@string/action_notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favourites"
        android:icon="@drawable/ic_favourite_24"
        android:orderInCategory="1"
        android:title="@string/action_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile_24"
        android:orderInCategory="2"
        android:title="@string/action_profile"
        app:showAsAction="always" />


</menu>


