<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="0"
        android:title="Search"

        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_action_list_white"
        android:orderInCategory="1"
        android:title="@string/action_list"
        android:checked="true"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/ic_action_grid_white"
        android:orderInCategory="2"
        android:title="@string/action_grid"
        android:checked="false"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mini"
        android:icon="@drawable/ic_action_grid_white"
        android:orderInCategory="3"
        android:title="@string/action_mini"
        android:checked="false"
        android:checkable="true"
        app:showAsAction="never" />

</menu>