<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_1_1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/textView_1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_1_2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"
            android:textStyle="bold|italic" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/text_1_3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp" />

        <!--<TextView-->
        <!--android:id="@+id/textView_2_2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/text_3"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:textSize="16sp" />-->


        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<Button-->
        <!--android:id="@+id/button_verify"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="64dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/text_3_1"-->
        <!--android:textSize="24sp" />-->


        <!--</RelativeLayout>-->


        <LinearLayout
            android:id="@+id/ll_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/whatsapp_color_modified"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_telephone_verify_registration_512" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_3_1"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>