<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/textView_quotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/quotation_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_points"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_circle"
        android:gravity="center"
        android:text="@string/points_text"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_popular_petitions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:text="@string/button_popular_petitions" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_new_petitions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:text="@string/button_new_petitions" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_victory_petitions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:text="@string/button_victory_petitions" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView_post_petition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/post_petition_home"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/default_blue"
        android:textSize="18sp" />

</LinearLayout>