<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/edittext_registration_final_step_3_landmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/land_mark"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#B2B3B5" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/edittext_registration_final_step_3_street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#B2B3B5" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/edittext_registration_final_step_3_door"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/door"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#B2B3B5" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/edittext_registration_final_step_3_referral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/referral"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="#B2B3B5" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Accept the terms and conditions" />


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_circle_small_white" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_circle_small_white" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/shape_circle_small_green" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>